fix(css): hide horizontal overflow on body element
When we had them on cards, the tooltips (which I completely forgot
about) would get cut off and that definitely isn't ideal. Thanks to
@Gusted for figuring out why cards had the overflow to begin with.

--- a/scss/ui/_reset.scss
+++ b/scss/ui/_reset.scss
@@ -8,6 +8,7 @@ html {
 
     body {
         margin: 0;
+        overflow-x: hidden;
         color: var(--fg-1);
         background: var(--bg-1);
         line-height: 1.5;
